# PA193_mnemonic_CGB

./: CMakeLists.txt  README.md  main.c
main/: Init.c  Init.h  choice.c  convNum.c  convNum.h  convNumber.c  entropyToDec.c  main  main.c  main.sln  main.vcxproj  main.vcxproj.filters  main2.c  makefile  stringConv.c  stringConv.h
test_documentation/: Input_Tests.docx
test_documentation/dynamic_analysis/: test_entropy_binary_as_input.report  test_entropy_binary_as_input_STACK.report  test_entropy_hex_as_input.report  test_entropy_hex_as_input_STACK.report  test_mnemonic_and_seed_as_input.report  test_mnemonic_and_seed_as_input_STACK.report  test_mnemonic_as_input.report  test_mnemonic_as_input_STACK.report
test_documentation/dynamic_analysis/fuzzing/afl_out/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
test_documentation/dynamic_analysis/fuzzing/afl_out/crashes/: README.txt  id:000000,sig:11,src:000000,op:flip1,pos:0  id:000001,sig:11,src:000000,op:flip1,pos:1  id:000002,sig:11,src:000000,op:flip1,pos:2  id:000004,sig:11,src:000000,op:flip4,pos:2  id:000005,sig:11,src:000000,op:flip4,pos:6  id:000006,sig:11,src:000000,op:int8,pos:5,val:+0  id:000007,sig:11,src:000000,op:int8,pos:6,val:+100  id:000008,sig:11,src:000000,op:int16,pos:4,val:+100  id:000009,sig:11,src:000000,op:int16,pos:5,val:+100  id:000010,sig:11,src:000000,op:havoc,rep:2  (+11 more)
test_documentation/dynamic_analysis/fuzzing/main/: Init.c  Init.h  choice.c  choice.h  convNum.h  hashFct.c  hashFct.h  main  main.c  makefile  stringConv.c  stringConv.h
test_documentation/static_analysis/: cppcheck.report
(+101 files in other folders)
